--- a/src/app/stock-inventory/components/stock-branch/stock-branch.component.html
+++ b/src/app/stock-inventory/components/stock-branch/stock-branch.component.html
@@ -5,10 +5,23 @@
             placeholder='Branch ID'
             formControlName='branch'>
 
+            <div *ngIf='required("branch")' >
+                Branch is required
+            </div>
+            <div *ngIf='invalid'>
+                Invalid branch code : 1 letter, 3 numbers
+            </div>
+            <div *ngIf='unknown'>
+                Unknown branch, please check the ID
+            </div>
+
         <input 
             type='text' 
             placeholder='Manager Code'
             formControlName='code'>
-    
+
+            <div *ngIf='required("code")'>
+                Manager ID is required.
+            </div>
     </div>
 </div>
